tests/lean/297.lean
theorem r:0:=do
0if 0then 0
.
